--- a/package.json
+++ b/package.json
@@ -7,11 +7,36 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "format": "prettier . --write",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@nuxt/eslint": "^1.12.1",
+    "@pinia/nuxt": "^0.11.3",
+    "@typescript-eslint/eslint-plugin": "^8.50.0",
+    "@typescript-eslint/parser": "^8.50.0",
+    "@vueuse/nuxt": "^14.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "eslint": "^9.39.2",
+    "lucide-vue-next": "^0.562.0",
     "nuxt": "^4.2.2",
+    "pinia": "^3.0.4",
+    "shadcn-nuxt": "^2.4.3",
+    "tailwind-merge": "^3.4.0",
     "vue": "^3.5.25",
+    "vue-eslint-parser": "^10.2.0",
     "vue-router": "^4.6.4"
+  },
+  "devDependencies": {
+    "@nuxtjs/tailwindcss": "^7.0.0-beta.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "prettier": "^3.7.4",
+    "sass": "^1.97.0",
+    "tailwindcss": "^4.1.18",
+    "tw-animate-css": "^1.4.0"
   }
 }
