--- a/components.json
+++ b/components.json
@@ -4,7 +4,7 @@
   "typescript": true,
   "tailwind": {
     "config": "",
-    "css": "app/assets/css/tailwind.css",
+    "css": "app/assets/scss/tailwind.scss",
     "baseColor": "neutral",
     "cssVariables": true,
     "prefix": ""
