--- a/package.json
+++ b/package.json
@@ -24,14 +24,18 @@
     "lucide-vue-next": "^0.562.0",
     "nuxt": "^4.2.2",
     "pinia": "^3.0.4",
+    "reka-ui": "^2.6.1",
     "shadcn-nuxt": "^2.4.3",
     "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "vue": "^3.5.25",
     "vue-eslint-parser": "^10.2.0",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
+    "@nuxtjs/color-mode": "^4.0.0",
     "@nuxtjs/tailwindcss": "^7.0.0-beta.1",
+    "@types/node": "^25.0.3",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "prettier": "^3.7.4",
