--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@pinia/nuxt": "^0.11.3",
     "@typescript-eslint/eslint-plugin": "^8.50.0",
     "@typescript-eslint/parser": "^8.50.0",
+    "@vueuse/core": "^14.1.0",
     "@vueuse/nuxt": "^14.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
